# humanoid-control-roadmap

./: .dockerignore  .gitignore
C6/shanlan_HW6/HW6_student_final/shenlan_humanoid_hw6/: ARTIFACTS.sha256  pyproject.toml
C6/shanlan_HW6/HW6_student_final/shenlan_humanoid_hw6/assets/motions/: README.md
C6/shanlan_HW6/HW6_student_final/shenlan_humanoid_hw6/assets/motions/g1_accad_walk/: accad_B11____Walk_turn_left_135.npz  accad_B11___walk_turn_left__135_.npz  accad_B12___walk_turn_right__90_.npz  accad_B14____Walk_turn_right_45.npz  accad_B14___walk_turn_right__135_.npz  accad_B2___walk_to_stand_t2.npz  accad_B4___stand_to_walk_back.npz  accad_B7___walk_backwards_turn_forwards.npz  accad_B9____Walk_turn_left_90.npz  accad_B9___walk_turn_left__90_.npz
C6/shanlan_HW6/HW6_student_final/shenlan_humanoid_hw6/src/humanoid_hw6/: __init__.py  student_env_cfg.py
C6/shanlan_HW6/HW6_student_final/shenlan_humanoid_hw6/src/humanoid_hw6/config/g1/: env_cfgs.py  motion_data_cfg.yaml  rl_cfg.py
C6/shanlan_HW6/HW6_student_final/shenlan_humanoid_hw6/src/humanoid_hw6/mdp/: commands.py  rewards.py
C6/shanlan_HW6/HW6_student_final/shenlan_humanoid_hw6/src/humanoid_hw6/mdp/motion/: __init__.py  library.py  representations.py  sampling.py
C6/shanlan_HW6/HW6_student_final/shenlan_humanoid_hw6/src/humanoid_hw6/rl/: config.py  model_cfg.py  motion_stats.py
C6/shanlan_HW6/HW6_student_final/shenlan_humanoid_hw6/src/humanoid_hw6/scripts/: README.md
C6/shanlan_HW6/HW6_student_final/shenlan_humanoid_hw6/tests/: test_distillation_reference.py  test_teacher_observation_space.py
(+254 files in other folders)
